# Kritical-Hit

./: February27_Report.md  Presentation.md  README.md
Dev/KriticalHit_App/: Battle.cpp  Battle.h  KriticalHit_App.pro  capacity.cpp  capacity.h  database.cpp  database.h  entity.cpp  entity.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moveLibrary.h  newtemplatemenu.cpp  newtemplatemenu.h  newtemplatemenu.ui  rulesmenu.cpp  rulesmenu.h  rulesmenu.ui  setup.cpp  setup.h  simulationmenu.cpp  simulationmenu.h  simulationmenu.ui  templatemainmenu.cpp  templatemainmenu.h  templatemainmenu.ui
Dev/build-KriticalHit_App-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Irrorater.qss  Makefile  Makefile.Debug  Makefile.Release  rules1.db  rules1.db-journal  ui_mainwindow.h  ui_newtemplatemenu.h  ui_rulesmenu.h  ui_simulationmenu.h  ui_templatemainmenu.h
Dev/build-KriticalHit_App-Desktop_Qt_6_5_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  rules1.db
Documents/: KriticalHit Written Report V1.0.md  MoonshotActionPlan.md
Documents/Functionnal/: Functionnal_Specs.md
Documents/Monthly Reports/: Reports.md
Documents/Technical/: Technical_Specs.md
Documents/Test Plan/: Bug_Tracker.md  Test_plan.md  Testing_Cases.md
Documents/Written Report V.1/: KriticalHit Written Report V1.0.md
Prototypes/Database_Prototype_1/: Database Paul version 1.pdm  Database_Prototype_1.pro  database_workspace.sws  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Prototypes/Simulation_Test1 - Copy/: CMakeLists.txt  CMakePresets.json  main.cpp
(+381 files in other folders)
